<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/todo_background_todo_app"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/hint_task"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginHorizontal="8dp"/>

    <RadioGroup
        android:id="@+id/radioGroupCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">


        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_business"
            android:buttonTint="@color/todo_business_category"
            android:textColor="@color/white"
            android:checked="true" />

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_personal"
            android:buttonTint="@color/todo_personal_category"
            android:textColor="@color/white"
            />

        <RadioButton
            android:id="@+id/rbPhysical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_physical"
            android:buttonTint="@color/todo_physical_category"
            android:textColor="@color/white"
            />

        <RadioButton
            android:id="@+id/rbOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_other"
            android:buttonTint="@color/todo_other_category"
            android:textColor="@color/white"
            />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCreateTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_create_task"
        android:backgroundTint="@color/todo_accent" />
</LinearLayout>